# Reciept-Scanner-with-Notion-Integration

./: .env.example  .gitignore  Dockerfile  QUICK_CLOUD_SETUP.md  README.MD  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
.history/: Dockerfile_20250809180630  Dockerfile_20250809183808  Dockerfile_20250809185650  Dockerfile_20250809185654  railway_20250809184036.json  railway_20250809185351.json  railway_20250809185644.json  railway_20250809185706.json  railway_20250809185954.json  railway_20250809192006.json
.history/.github/workflows/: deploy_20250809174006.yml  deploy_20250809185212.yml
.history/app/: llm_handler_20250809182253.py  llm_handler_20250809182954.py  llm_handler_20250809183110.py  main_20250729220003.py  main_20250809184035.py  security_20250809191829.py  security_20250809193016.py
app/: llm_handler.py  main.py  models.py  notion_client.py  prompt.yaml  security.py
scripts/: port_manager.sh  start_fastapi.sh  start_ngrok.sh  start_production.sh  start_simple.sh
tests/: test_api.py
