[project]
name = "jr-reciept-scanner-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "notebook>=7.4.4",
    "notion-client>=2.4.0",
    "openai>=1.97.1",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.4.7",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "uvicorn>=0.34.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
